--- a/index.html
+++ b/index.html
@@ -83,15 +83,157 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark1 ">
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav pl-5 text-white-navbar">
-                    <li class="nav-item dropdown p-2">
+                    <li class="nav-item dropdown mega-dropdown p-2">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             TÜM KATAGORİLER
                         </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="#">Action</a>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <a class="dropdown-item" href="#">Something else here</a>
+                        <div class="dropdown-menu mega-menu w-100 white mt-1"
+                            aria-labelledby="navbarDropdownMenuLink1">
+                            <div class="row  mt-3">
+                                <div class="col-sm-6">
+                                    <div class="row">
+                                        <div class="col-sm-4 ml-5 font-alt-baslik">
+                                            TÜM PERDE KATAGORİLERİ
+                                        </div>
+                                        <div class=" col-sm-6 ml-5 border-bottom1"></div>
+                                        <div class="col-sm-4 mt-3 mb-5 ml-5">
+                                            <ul class="list-unstyled">
+                                                <li class="mt-1">
+                                                    <a href="http://" class="font-link-alt">Tül perde</a>
+                                                </li>
+                                                <li class="mt-1">
+                                                    <a href="http://" class="font-link-alt">Fon perdeler</a>
+                                                </li>
+                                                <li class="mt-1">
+                                                    <a href="http://" class="font-link-alt">Güneşlik Saten</a>
+                                                </li>
+                                                <li class="mt-1">
+                                                    <a href="http://" class="font-link-alt">Çift Sistem Zebra Perde</a>
+                                                </li>
+                                                <li class="mt-1">
+                                                    <a href="http://" class="font-link-alt">Outlet Zebra Perdeler</a>
+                                                </li>
+                                                <li class="mt-1">
+                                                    <a href="http://" class="font-link-alt">Stor perde</a>
+                                                </li>
+                                                <li class="mt-1">
+                                                    <a href="http://" class="font-link-alt">Simli Polyester Stor</a>
+                                                </li>
+                                                <li class="mt-1">
+                                                    <a href="http://" class="font-link-alt">Jaluzi Perde</a>
+                                                </li>
+                                                <li class="mt-1">
+                                                    <a href="http://" class="font-link-alt">Dikey Perde</a>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                        <div class="col-sm-6 mt-3 ml-5">
+                                            <ul class="list-unstyled">
+                                                <li class="mt-1">
+                                                    <a href="http://" class="font-link-alt">Size Özel Baskı(Stor
+                                                        Perde)</a>
+                                                </li>
+                                                <li class="mt-1">
+                                                    <a href="http://" class="font-link-alt">Polyester Stor perde</a>
+                                                </li>
+                                                <li class="mt-1">
+                                                    <a href="http://" class="font-link-alt">Mat Polyester Stor
+                                                        perde(Yıkanabilir Seri)</a>
+                                                </li>
+                                                <li class="mt-1">
+                                                    <a href="http://" class="font-link-alt">Karartma Stor Perde
+                                                        Fiyatları(Black Out)</a>
+                                                </li>
+                                                <li class="mt-1">
+                                                    <a href="http://" class="font-link-alt">Desenli Stor Perdeler</a>
+                                                </li>
+                                                <li class="mt-1">
+                                                    <a href="http://" class="font-link-alt">Stor Perde İçin Özel Dijital
+                                                        Baskı Desenleri</a>
+                                                </li>
+                                                <li class="mt-1" class="font-link-alt">
+                                                    <a href="http://" class="font-link-alt">Zebra Perde</a>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </div>
+
+                                </div>
+                                <div class="col-sm-3">
+                                    <div class="row">
+                                        <div class="col-sm-4 font-alt-baslik">
+                                            PERDE HAKKINDA
+                                        </div>
+                                        <div class="col-sm-7 border-bottom1">
+
+                                        </div>
+                                        <div class="col-sm-12 pt-3">
+                                            <ul class="list-unstyled">
+                                                <li class="mt-1">
+                                                    <a href="http://" class="font-link-alt">Perde ölçüsü Nasıl
+                                                        Alınır?</a>
+                                                </li>
+                                                <li class="mt-1">
+                                                    <a href="http://" class="font-link-alt">Perde Motajı Nasıl
+                                                        Yapılır?</a>
+                                                </li>
+                                                <li class="mt-1">
+                                                    <a href="http://" class="font-link-alt">Zebra Perde Sipraşi Nasıl
+                                                        Verilir?</a>
+                                                </li>
+                                                <li class="mt-1" class="font-link-alt">
+                                                    <a href="http://" class="font-link-alt">İade & İptal İşlemleri</a>
+                                                </li>
+                                                <li class="mt-1" class="font-link-alt">
+                                                    <a href="http://" class="font-link-alt">Ödeme Seceneklerir</a>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-sm-3">
+                                    <div class="row">
+                                        <div class="col-sm-5 font-alt-baslik">
+                                            Müşteri Hizmetleri
+                                        </div>
+                                        <div class="col-sm-6 border-bottom1">
+
+                                        </div>
+                                        <div class="col-sm-12 pt-3">
+                                            <ul class="list-unstyled">
+                                                <li class="mt-1">
+                                                    <a href="http://" class="font-link-alt">Kişisel Verilerin
+                                                        Korunmasına İLişkin Bilg.</a>
+                                                </li>
+                                                <li class="mt-1">
+                                                    <a href="http://" class="font-link-alt">Kullanım ve Gizlilik
+                                                        Şartları</a>
+                                                </li>
+                                                <li class="mt-1">
+                                                    <a href="http://" class="font-link-alt">Hızlı Destek</a>
+                                                </li>
+                                                <li class="mt-1">
+                                                    <a href="http://" class="font-link-alt">Sipraş Hakkında</a>
+                                                </li>
+                                                <li class="mt-1">
+                                                    <a href="http://" class="font-link-alt">Garanti-Güvenlik</a>
+                                                </li>
+                                                <li class="mt-1">
+                                                    <a href="http://" class="font-link-alt">Ödeme</a>
+                                                </li>
+                                                <li class="mt-1">
+                                                    <a href="http://" class="font-link-alt">Kargo Teslimat</a>
+                                                </li>
+                                                <li class="mt-1">
+                                                    <a href="http://" class="font-link-alt">İlteşim</a>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+
+                            </div>
                         </div>
                     </li>
                     <li class="nav-item p-2">
@@ -335,7 +477,7 @@
         </div>
         <div class="row ml-5 mr-5 mt-5">
             <div class="col-sm-3">
-                <a href="http://" >
+                <a href="http://">
                     <div style="background-image:url(./perdeYeri/img/img-katagori-1.png);background-size: 100% 100%;height: 45vh;"
                         class="mb-3">
                         <div class="perde-tur-hover perde-tur perde-tur-top p-3">
@@ -490,7 +632,7 @@
                     <i class="fas fa-star bg-orange"></i>(345)
                 </div>
             </div>
-            <div class="col-sm-2 mr-5  mb-5 ml-2 text-center">
+            <div class="col-sm-2 mr-4  mb-5 ml-2 text-center">
                 <a href="http://">
                     <div class="mb-2"
                         style="background-image:url(./perdeYeri/img/img-vitrin.png);background-size: 100% 100%; height: 35vh;">
@@ -540,7 +682,7 @@
                 </div>
             </div>
 
-            <div class="col-sm-2 mr-5 mb-5 text-center">
+            <div class="col-sm-2 mr-3 mb-5 text-center">
                 <a href="http://">
                     <div class="mb-2"
                         style="background-image:url(./perdeYeri/img/img-vitrin.png);background-size: 100% 100%; height: 35vh;">
@@ -564,7 +706,7 @@
                     <i class="fas fa-star bg-orange"></i>(345)
                 </div>
             </div>
-            <div class="col-sm-2 mr-5 mb-5 ml-2 text-center">
+            <div class="col-sm-2 mr-5 mb-5 ml-1 text-center">
                 <a href="http://">
                     <div class="mb-2"
                         style="background-image:url(./perdeYeri/img/img-vitrin.png);background-size: 100% 100%; height: 35vh;">
