--- a/index.html
+++ b/index.html
@@ -88,8 +88,7 @@
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             TÜM KATAGORİLER
                         </a>
-                        <div class="dropdown-menu mega-menu w-100 white mt-1"
-                            aria-labelledby="navbarDropdownMenuLink1">
+                        <div class="dropdown-menu mega-menu w-100 white mt-1" aria-labelledby="navbarDropdownMenuLink1">
                             <div class="row  mt-3">
                                 <div class="col-sm-6">
                                     <div class="row">
@@ -425,19 +424,10 @@
                         <div class="swiper-slide bg-light p-5">
                             <div class="hafta-urun bg-light text-red">HAFTANIN ÜRÜNÜ</div>
                             <div class="ic-border p-4 text-center">
-                                <img src="./perdeYeri/img/silder1.png" alt="" srcset="" class="slider1-img">
+                                <a href="http://"><img src="./perdeYeri/img/silder1.png" alt="" srcset=""
+                                        class="slider1-img"></a>
                                 <br>
-                                <p>Zebra Perde Beyaz Geniş Plise Model</p>
-                                <br>
-                                <p><del class="mb-2">129.90</del><b style="font-size:30px;"> 129.90</b></p>
-                            </div>
-                        </div>
-                        <div class="swiper-slide bg-light p-5">
-                            <div class="hafta-urun bg-light text-red">HAFTANIN ÜRÜNÜ</div>
-                            <div class="ic-border p-4 text-center">
-                                <img src="./perdeYeri/img/silder1.png" alt="" srcset="" class="slider1-img">
-                                <br>
-                                <p>Zebra Perde Beyaz Geniş Plise Model</p>
+                                <a href="http://"><p class="font-vitrin-p">Zebra Perde Beyaz Geniş Plise Model</p></a>
                                 <br>
                                 <p><del class="mb-2">129.90</del><b style="font-size:30px;"> 129.90</b></p>
                             </div>
@@ -447,7 +437,7 @@
                             <div class="ic-border p-4 text-center">
                                 <img src="./perdeYeri/img/silder1.png" alt="" srcset="" class="slider1-img">
                                 <br>
-                                <p>Zebra Perde Beyaz Geniş Plise Model</p>
+                                <a href="http://"><p class="font-vitrin-p">Zebra Perde Beyaz Geniş Plise Model</p></a>
                                 <br>
                                 <p><del class="mb-2">129.90</del><b style="font-size:30px;"> 129.90</b></p>
                             </div>
@@ -455,9 +445,21 @@
                         <div class="swiper-slide bg-light p-5">
                             <div class="hafta-urun bg-light text-red">HAFTANIN ÜRÜNÜ</div>
                             <div class="ic-border p-4 text-center">
-                                <img src="./perdeYeri/img/silder1.png" alt="" srcset="" class="slider1-img">
+                                <a href="http://"><img src="./perdeYeri/img/silder1.png" alt="" srcset=""
+                                        class="slider1-img"></a>
                                 <br>
-                                <p>Zebra Perde Beyaz Geniş Plise Model</p>
+                                <a href="http://"><p class="font-vitrin-p">Zebra Perde Beyaz Geniş Plise Model</p></a>
+                                <br>
+                                <p><del class="mb-2">129.90</del><b style="font-size:30px;"> 129.90</b></p>
+                            </div>
+                        </div>
+                        <div class="swiper-slide bg-light p-5">
+                            <div class="hafta-urun bg-light text-red">HAFTANIN ÜRÜNÜ</div>
+                            <div class="ic-border p-4 text-center">
+                                <a href="http://"><img src="./perdeYeri/img/silder1.png" alt="" srcset=""
+                                        class="slider1-img"></a>
+                                <br>
+                                <a href="http://"><p class="font-vitrin-p">Zebra Perde Beyaz Geniş Plise Model</p></a>
                                 <br>
                                 <p><del class="mb-2">129.90</del><b style="font-size:30px;"> 129.90</b></p>
                             </div>
