--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-    <link href="fontawesome-free-5.11.2-web/css/all.css" rel="stylesheet">
-    <link href="fontawesome-free-5.11.2-web/css/all.js" rel="stylesheet">
+    <link href="./fontawesome-free-5.11.2-web/css/all.css" rel="stylesheet">
+    <link href="./fontawesome-free-5.11.2-web/css/all.js" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>PERDEYERİ.COM</title>
 </head>
@@ -416,7 +416,7 @@
                         </div>
                     </div>
                 </div>
-                <script src="../swiper-master/package/js/swiper.min.js"></script>
+                
             </div>
             <div class="col-sm-4">
                 <div class="swiper-container1">
@@ -467,7 +467,7 @@
                     </div>
                     <div class="swiper-button-next btn-slider1 btn-slider1-next bg-light p-4"></div>
                     <div class="swiper-button-prev btn-slider1 btn-slider1-prev bg-light p-4"></div>
-                    <script src="../swiper-master/package/js/swiper.min.js"></script>
+                    <script src="./swiper-master/package/js/swiper.min.js"></script>
                 </div>
             </div>
         </div>
